--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+.main_container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 #container {
   width: 80%;
   margin: auto;
@@ -26,7 +31,9 @@ body {
   display: flex;
   justify-content: space-between;
   background-color: #757575;
-  height: 80px;
+  height: 70px;
+  position: sticky;
+  top: 0px;
 }
 .navbar-logo {
   width: 100%;
@@ -56,6 +63,63 @@ body {
   width: 100%;
 }
 
-.filter > input {
+/* **********************  SHOP CATEGORY ********************************* */
+.dropbtn {
+  background-color: #04aa6d;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  position: relative;
+  /* left: 500px; */
+  /* margin-bottom: 40px; */
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
   display: block;
 }
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+/* ********************  SIDE BAR MENU ******************************************** */
+.filter {
+  margin-left: 10px;
+}
+
+.filter div {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+/* .checkbox-container input[type="checkbox"] {
+  display: inline-block;
+  margin-right: 5px;
+} */
