--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0px;
   padding: 0px;
-  background-color: #80deea;
+  background-color: #fefae0;
 }
 
 .main_container {
@@ -29,23 +29,25 @@ body {
 .card-content {
   width: 100%;
   color: #212121;
+  background-color: #ccd5ae;
 }
-.card-content> img{
+.card-content > img {
   width: 100%;
 }
 
-/* #container > div img {
+#container > div img {
   width: 100%;
   /* background: red !important; */
-} */
+}
 
 .navbar {
   display: flex;
   justify-content: space-between;
-  background-color: #757575;
+  background-color: #8ecae6;
   height: 70px;
   position: sticky;
   top: 0px;
+  z-index: 999;
 }
 .navbar-logo {
   width: 100%;
@@ -68,15 +70,16 @@ body {
   /* border: 2px solid greenyellow; */
 }
 
-.window-image {
+/* .window-image {
   position: relative;
   display: inline-block;
-}
+} */
 
 .window-image img {
   display: block;
   width: 100%;
   height: auto;
+  height: 300px;
 }
 
 .text-overlay {
@@ -88,7 +91,7 @@ body {
   font-size: 30px;
   font-weight: bold;
   text-align: left;
-  z-index: 1;
+  z-index: 3;
 }
 
 /* **********************  SHOP CATEGORY ********************************* */
@@ -135,7 +138,9 @@ body {
 .dropdown:hover .dropbtn {
   background-color: #3e8e41;
 }
+
 /* ********************  SIDE BAR MENU ******************************************** */
+
 .filter {
   margin-left: 10px;
 }
@@ -151,3 +156,193 @@ body {
   display: inline-block;
   margin-right: 5px;
 } */
+/* *********************** FOOTER *****************************
+ */
+
+/* Style the footer container */
+footer {
+  background-color: #f9f9f9;
+  padding: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+/* Style the navigation section */
+.footer-navigation {
+  flex-basis: 30%;
+  margin-bottom: 2rem;
+}
+.footer-navigation h3 {
+  color: #555;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+.footer-navigation ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.footer-navigation li {
+  margin-bottom: 0.5rem;
+}
+.footer-navigation a {
+  color: #888;
+  font-size: 1rem;
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
+}
+.footer-navigation a:hover {
+  color: #007bff;
+}
+
+/* Style the social media section */
+.footer-social {
+  flex-basis: 20%;
+  margin-bottom: 2rem;
+}
+.footer-social h3 {
+  color: #555;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+.footer-social ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.footer-social li {
+  margin-right: 1rem;
+}
+.footer-social a {
+  color: #888;
+  font-size: 1.5rem;
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
+}
+.footer-social a:hover {
+  color: #007bff;
+}
+
+/* Style the contact section */
+.footer-contact {
+  flex-basis: 25%;
+  margin-bottom: 2rem;
+}
+.footer-contact h3 {
+  color: #555;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+.footer-contact p {
+  color: #888;
+  font-size: 1rem;
+  line-height: 1.5;
+  margin: 0;
+}
+
+/* Style the legal section */
+.footer-legal {
+  flex-basis: 100%;
+  text-align: center;
+  color: #888;
+  font-size: 0.8rem;
+}
+.footer-legal a {
+  color: #007bff;
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
+}
+.footer-legal a:hover {
+  color: #0056b3;
+}
+
+/* *****************  MEDIA QUERY ************************************ */
+
+/* Mobile devices (portrait and landscape) */
+@media only screen and (max-width: 768px) {
+  .main_container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #container {
+    width: 90%;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .navbar {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .navbar-logo {
+    width: 100%;
+    margin-top: 10px;
+    justify-content: center;
+  }
+
+  .navbar-content {
+    width: 80%;
+    justify-content: center;
+    margin-top: 10px;
+  }
+
+  .dropdown {
+    display: none;
+  }
+
+  .filter {
+    margin: 10px 0;
+  }
+
+  .text-overlay {
+    font-size: 20px;
+  }
+}
+
+/* Tablets and small desktops */
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  #container {
+    width: 90%;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Large desktops and laptops */
+@media only screen and (min-width: 992px) {
+  #container {
+    width: 80%;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .navbar {
+    height: 70px;
+    flex-direction: row;
+  }
+
+  .navbar-logo {
+    width: 40%;
+    margin-top: 0;
+    justify-content: start;
+  }
+
+  .navbar-content {
+    width: 30%;
+    justify-content: space-around;
+    margin-top: 0;
+  }
+
+  .dropdown {
+    display: inline-block;
+  }
+
+  .filter {
+    margin: 0;
+  }
+
+  .text-overlay {
+    font-size: 30px;
+  }
+}
