--- a/index.css
+++ b/index.css
@@ -84,14 +84,16 @@ body {
 
 .text-overlay {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  /* top: 50%; */
+  bottom: 70%;
+  left: 40%;
   transform: translate(-50%, -50%);
   color: black;
   font-size: 30px;
   font-weight: bold;
   text-align: left;
   z-index: 3;
+  /* margin-bottom: 50%; */
 }
 
 /* **********************  SHOP CATEGORY ********************************* */
@@ -302,14 +304,6 @@ footer {
   }
 }
 
-/* Tablets and small desktops */
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-  #container {
-    width: 90%;
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
 /* Large desktops and laptops */
 @media only screen and (min-width: 992px) {
   #container {
@@ -344,5 +338,26 @@ footer {
 
   .text-overlay {
     font-size: 30px;
+  }
+}
+
+/* Tablets and small desktops */
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  #container {
+    width: 90%;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .navbar-content {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  #container {
+    width: 90%;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .navbar-content {
+    display: none;
   }
 }
